working transition with no problems. added some helper functions. returned true on events so inputs would work. also preventing mouseup control events from happening when you are on mobile

--- a/swipe/swipe.css
+++ b/swipe/swipe.css
@@ -10,10 +10,12 @@ body {
 .pages {
   width: 100%;
   height: 100%;
+  box-sizing: border-box;
 /*   pointer-events: all;
  */}
 
 .page {
+  box-sizing: border-box;
   width: 100%;
   height: 100%;
   position: absolute;
